@@ -1,5 +1,12 @@
 2005-10-13  Jakub Jelinek  <jakub@redhat.com>
 
+	* single.c (GOMP_single_copy_end): Don't segfault if team is NULL.
+	* testsuite/libgomp.dg/single-2.c: New test.
+
+	* testsuite/libgomp.dg/dg.exp (lang_library_path, lang_test_file,
+	lang_link_flags): Unset, so that they aren't inherited from previously
+	sourced *.exp.
+
 	* testsuite/libgomp.fortran/threadprivate1.f90: New test.
 
 2005-10-12  Richard Henderson  <rth@redhat.com>
